# yosys-json-netlist

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
testdata/: adder.json  adder.v  generate.sh  modules.json  modules.v  mult.json  mult.v  undefined.json  undefined.v
